<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    style="@style/estilomenu">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery"/>
        <item
            android:id="@+id/nav_lugar"
            android:icon="@drawable/ic_map_black_24dp"
            android:title="@string/menu_lugar"/>

        <item
            android:id="@+id/nav_noti"
            android:icon="@drawable/ic_public_black_24dp"
            android:title="@string/menu_not"/>

        <item
            android:id="@+id/nav_clas"
            android:icon="@drawable/ic_clasific_account_black_24dp"
            android:title="@string/menu_clasi"/>


    </group>


</menu>
