<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.poolcorunha.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.poolcorunha.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_lugar"
        android:name="com.example.poolcorunha.ui.mapa.MapaFragment"
        android:label="@string/menu_lugar"
        tools:layout="@layout/fragment_lugar" />

    <fragment
        android:id="@+id/nav_clas"
        android:name="com.example.poolcorunha.ui.clasif.ClasifFragment"
        android:label="@string/menu_clasi"
        tools:layout="@layout/fragment_clas" />

    <fragment
        android:id="@+id/nav_noti"
        android:name="com.example.poolcorunha.ui.noticias.NoticiaFragment"
        android:label="@string/menu_not"
        tools:layout="@layout/fragment_noti" />
</navigation>